--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -28,7 +28,6 @@
     "multer": "^1.4.4",
     "multer-gridfs-storage": "^1.3.0",
     "nodemailer": "^6.7.8",
-    "nodemon": "^2.0.19",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "socket.io": "^4.5.4",
@@ -36,12 +35,7 @@
     "yargs": "^17.5.1"
   },
   "devDependencies": {
-    "eslint": "^8.2.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-plugin-import": "^2.24.1",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-react-hooks": "^4.3.0"
+    "nodemon": "^2.0.19"
   },
   "keywords": []
 }
